Fix OAuth redirect

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 # Google OAuth (from Google Cloud Console)
 GOOGLE_CLIENT_ID=374645506059-tdoch12rnfgrai9ba3vp0vmn8iku69he.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-REDIRECT_URI=https://precosmic-unpraiseful-donny.ngrok-free.dev/auth/google/callback
+REDIRECT_URI=https://email-todo-backend.onrender.com/auth/google/callback
